# east_shimane_rs-0_document

./: Cargo.toml  README.md  workshop.md
examples/: String_str.rs  arc_mutex.rs  async_await_join.rs  async_await_malti.rs  copy.rs  error_handle.rs  impl_new.rs  move.rs  mut_ref_and_ref.rs  panic.rs  practice.rs  shadowing_example.rs  shadowing_pointer.rs  trait_sample.rs
src/: value.rs
src/value/: shadowing_pointer.rs
value/: practice.rs  value.rs
